# audio-classifier

./: CMakeLists.txt  README.md
src/: AudioClassifier.h  audio-classifier.cpp  audio-classifier.h  create-training-set.cpp  main.cpp  train.cpp
