cmake_minimum_required(VERSION 2.6)
project (AudioClassifier)
find_package(OpenCV REQUIRED)
add_executable(audio-classifier ${PROJECT_SOURCE_DIR}/src/main.cpp)
add_executable(create-training-set ${PROJECT_SOURCE_DIR}/src/create-training-set.cpp)
add_executable(train ${PROJECT_SOURCE_DIR}/src/train.cpp)
target_link_libraries(audio-classifier ${OpenCV_LIBS} boost_system boost_filesystem  boost_program_options boost_serialization sox)
target_link_libraries(create-training-set ${OpenCV_LIBS} boost_system boost_filesystem  boost_program_options boost_serialization sox)
target_link_libraries(train ${OpenCV_LIBS} boost_system boost_filesystem  boost_program_options boost_serialization sox)

if(UNIX)
		 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11 -lstdc++ -lm")
endif()
